--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -51,7 +51,7 @@ h1 {
     margin-top: 50px;
     margin-bottom: 0;
     font-family: 'Sacramento', cursive;
-    font-size: 90px;
+    font-size: 5.625rem;
     color: #66BFBF;
 }
 .intro {
